# libads1256

./: .gitignore  CMakeLists.txt
include/: ADS1256.h  DAC8532.h  DEV_Config.h
src/: ADS1256.c  DAC8532.c  DEV_Config.c  debug.h
test/: CMakeLists.txt  ads1256-test  test.c
